Keep the aspect ratio of child with percentage max-height when the size of its container changes

BUG=677942
TEST=fast/replaced/aspect-ratio-of-replaced-child-with-max-height.html

Review-Url: https://codereview.chromium.org/2683793007
Cr-Commit-Position: refs/heads/master@{#450145}

Former-commit-id: 6da27d806a2386ab7baacf5692727ffa0a7706ca