third_party/WebKit/Source/core/layout/LayoutReplaced.cpp
@@ -132,8 +132,7 @@ bool LayoutReplaced::needsPreferredWidthsRecalculation() const {
   // If the height is a percentage and the width is auto, then the
   // containingBlocks's height changing can cause this node to change it's
   // preferred width because it maintains aspect ratio.
-  return hasRelativeLogicalHeight() && style()->logicalWidth().isAuto() &&
-         !hasAutoHeightOrContainingBlockWithAutoHeight();
+  return hasRelativeLogicalHeight() && style()->logicalWidth().isAuto();
 }
 
 static inline bool layoutObjectHasAspectRatio(
